[MOD] Fixed top menu z-index CSS

--- a/app/web/css/site.css
+++ b/app/web/css/site.css
@@ -21,6 +21,7 @@ body{
     background:#072265;
     position:fixed;
     width: 100%;
+    z-index: 999;
 }
 
 #top-menu a{
